--- a/package.json
+++ b/package.json
@@ -12,10 +12,18 @@
     "react-scripts": "3.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm-run-all -p client server",
+    "client": "react-scripts start",
+    "server": "json-server --port 3001 --watch server/db.json",
+    "seed": "node server/seed.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "faker": "^4.1.0",
+    "json-server": "^0.14.2",
+    "npm-run-all": "^4.1.5"
   },
   "eslintConfig": {
     "extends": "react-app"
